# rag_tutorials

./: .gitignore  README.md  default.sqlite  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
codes/: 1_basic_rag_with_bi_encoder.py  2_basic_rag_with_cross_encoder.py  3_Vector_DB.py  4_chunking.py  5_retrieval.py  6_doc_parsing.py  7_conversation_memory.py  8_adaptive_chunk_size.py  data.txt  document.json  local_model_using_ollama.py
codes/parent_store/: 0.txt  1.txt  2.txt
competitions/FinanceRAG/: rag_pipeline.py
competitions/LLM_science_exam/: rag_pipeline.py
hallucination/: create_gold_data.py  gold_dataset.py  rag_evaluations.py
hallucination/theory/: Automatic_Evaluation_Pipelines.txt  gold_dataset.txt  guardrails.txt  metrics.txt  rag_observability.txt
